; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/host/extr_pci.c_nvme_dbbuf_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/host/extr_pci.c_nvme_dbbuf_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_dev = type { i32, i32*, i32* }
%struct.nvme_queue = type { i32*, i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvme_dev*, %struct.nvme_queue*, i32)* @nvme_dbbuf_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvme_dbbuf_init(%struct.nvme_dev* %0, %struct.nvme_queue* %1, i32 %2) #0 {
  %4 = alloca %struct.nvme_dev*, align 8
  %5 = alloca %struct.nvme_queue*, align 8
  %6 = alloca i32, align 4
  store %struct.nvme_dev* %0, %struct.nvme_dev** %4, align 8
  store %struct.nvme_queue* %1, %struct.nvme_queue** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %8 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %11, %3
  br label %60

15:                                               ; preds = %11
  %16 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %17 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %16, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %21 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i64 @sq_idx(i32 %19, i32 %22)
  %24 = getelementptr inbounds i32, i32* %18, i64 %23
  %25 = load %struct.nvme_queue*, %struct.nvme_queue** %5, align 8
  %26 = getelementptr inbounds %struct.nvme_queue, %struct.nvme_queue* %25, i32 0, i32 3
  store i32* %24, i32** %26, align 8
  %27 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %28 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %27, i32 0, i32 2
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %6, align 4
  %31 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %32 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i64 @cq_idx(i32 %30, i32 %33)
  %35 = getelementptr inbounds i32, i32* %29, i64 %34
  %36 = load %struct.nvme_queue*, %struct.nvme_queue** %5, align 8
  %37 = getelementptr inbounds %struct.nvme_queue, %struct.nvme_queue* %36, i32 0, i32 2
  store i32* %35, i32** %37, align 8
  %38 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %39 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %38, i32 0, i32 1
  %40 = load i32*, i32** %39, align 8
  %41 = load i32, i32* %6, align 4
  %42 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %43 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = call i64 @sq_idx(i32 %41, i32 %44)
  %46 = getelementptr inbounds i32, i32* %40, i64 %45
  %47 = load %struct.nvme_queue*, %struct.nvme_queue** %5, align 8
  %48 = getelementptr inbounds %struct.nvme_queue, %struct.nvme_queue* %47, i32 0, i32 1
  store i32* %46, i32** %48, align 8
  %49 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %50 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %49, i32 0, i32 1
  %51 = load i32*, i32** %50, align 8
  %52 = load i32, i32* %6, align 4
  %53 = load %struct.nvme_dev*, %struct.nvme_dev** %4, align 8
  %54 = getelementptr inbounds %struct.nvme_dev, %struct.nvme_dev* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 8
  %56 = call i64 @cq_idx(i32 %52, i32 %55)
  %57 = getelementptr inbounds i32, i32* %51, i64 %56
  %58 = load %struct.nvme_queue*, %struct.nvme_queue** %5, align 8
  %59 = getelementptr inbounds %struct.nvme_queue, %struct.nvme_queue* %58, i32 0, i32 0
  store i32* %57, i32** %59, align 8
  br label %60

60:                                               ; preds = %15, %14
  ret void
}

declare dso_local i64 @sq_idx(i32, i32) #1

declare dso_local i64 @cq_idx(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
